--- a/views/login.html
+++ b/views/login.html
@@ -3,12 +3,12 @@
 		<div class="col-md-4 col-md-offset-4">
 			<div class="panel-white">
 
-				<form>
+				<form ng-submit="login()">
 					<div class="login-table">
 						<h3 class="center margin-bottom-20"> LOGIN </h3>
 
-						<input type="email" required class="form-input margin-bottom-20" placeholder="Email">
-						<input type="password" required class="form-input margin-bottom-20" placeholder="Password">
+						<input ng-model ="loginData.email" type="email" required class="form-input margin-bottom-20" placeholder="Email">
+						<input ng-model = "loginData.password" type="password" required class="form-input margin-bottom-20" placeholder="Password">
 
 						<div class="row margin-bottom-10">
 							<div class="col-md-6">
@@ -21,7 +21,7 @@
 
 						<div class="center">
 							<p class="validation-msg"> {{ responseMessage }} </p>
-							<button type="submit" class="btn btn-primary"> LOG IN </button>					                
+							<button type="submit" class="btn btn-primary"> LOG IN </button>
 						</div>
 
 					</div>
